<?xml version="1.0" encoding="utf-8"?>
<net.karthikraj.todobestpractices.ui.widget.BottomSheet xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".ui.NewTodoActivity">

    <LinearLayout
        android:id="@+id/bottom_sheet_content"
        android:layout_width="@dimen/bottom_sheet_width"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:elevation="@dimen/z_fab"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:transitionName="@string/transition_new_todo_item">

        <net.karthikraj.todobestpractices.ui.widget.BaselineGridTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:gravity="start|center_vertical"
            android:minHeight="?android:actionBarSize"
            android:paddingBottom="@dimen/spacing_micro"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/spacing_micro"
            android:text="@string/new_todo_title" />

        <net.karthikraj.todobestpractices.ui.widget.ObservableScrollView
            android:id="@+id/scroll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            android:paddingTop="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <net.karthikraj.todobestpractices.ui.widget.BaselineGridTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/padding_normal"
                    android:paddingStart="@dimen/padding_normal"
                    android:text="@string/new_todo_instructions"
                    android:textColor="@color/colorSecondaryText" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/new_todo_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_normal"
                    android:layout_marginStart="@dimen/padding_normal_til"
                    android:layout_marginTop="@dimen/spacing_normal">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/new_todo_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_todo_title_placeholder"
                        android:inputType="textCapWords" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/new_todo_post"
                    android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/add_todo"
                    android:enabled="false"
                    android:padding="@dimen/spacing_micro"
                    android:stateListAnimator="@animator/raise"
                    android:text="@string/new_todo_add" />

            </LinearLayout>

        </net.karthikraj.todobestpractices.ui.widget.ObservableScrollView>

    </LinearLayout>

</net.karthikraj.todobestpractices.ui.widget.BottomSheet>
